--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>Welcome to UGHHHH.com</h1>
     <p>Please enjoy your visit.</p>
     <hr>
-    <p>© 2025 ughhhh.com | <a href="mailto:webmaster@ughhhh.com">Contact Us</a></p>
+    <p>© 2025 ughhhh.com | <a href="mailto:theangiepasto@gmail.com">Contact Us</a></p>
   </div>
 
   <!-- Hit counter -->
